--- a/index.html
+++ b/index.html
@@ -5,14 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Let's Play</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     
 <header>
-    
+    <a href="#" class="logo">Welcome Gammers</a>
+    <ul class="nav">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Games</a></li>
+        <li><a href="#">Tournaments</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+
+    <div class="action">
+        <div class="searchbox">
+            <a href="#"><i class='bx bx-search'></i></a>
+            <input type="text" placeholder="Search games">
+        </div>
+    </div>
+    <div class="toggleMenu"></div>
 </header>
 
 
+<!---          HOME BANNER STARTS FROM HERE NOW         -->
 
 
 
