--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
 
 <!---          HOME BANNER STARTS FROM HERE NOW         -->
 
+    <div class="banner">
+        <div class="bg">
+            <div class="content">
+                <h2> A New Home for <br>
+                     Game Lovers</h2>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad pariatur velit nesciunt odio soluta impedit commodi, veniam corporis, ut et distinctio sapiente. Quidem inventore veniam accusamus debitis architecto minima possimus.
+                Tenetur illum velit, repellat ea error inventore beatae unde quidem id, doloremque necessitatibus omnis facilis dignissimos doloribus, vero amet nemo deserunt eius repudiandae dicta aspernatur. Quasi iure nobis maiores sunt.</p>
+                <a href="#" class="btn">Join Now</a>
+            </div>
+            <img src="Assets/assassin.png" alt="Assing-pic">
+        </div>
+    </div>
+
 
 
 
