--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Let's Play</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="keyFrames.css">
 </head>
 <body>
     
@@ -47,8 +48,132 @@
 
 
 
+<!--            ABOUT SECTION NOW           -->
+   
+    <div class="about">
+        <div class="contentBx">
+            <h2>About Us</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex ab nesciunt qui officiis voluptatum magni impedit nulla adipisci, eum totam repudiandae error ipsa, quae nostrum animi voluptatibus, ducimus aliquam?
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, nesciunt? Saepe error hic sequi eum esse, quaerat aliquam ad exercitationem, dicta facilis placeat numquam at odio ipsam blanditiis qui repellat.
+                Placeat laudantium porro praesentium voluptatibus. Deleniti illum distinctio, cumque, dolor voluptatem consectetur dignissimos maiores, doloremque odit tempora quae? Repudiandae nisi nihil necessitatibus repellat adipisci labore sunt vel blanditiis deleniti quasi!
+            </p>
+            <a href="#">Read More</a>
+        </div>
+        <img src="Assets/videogame.png" alt="Video-Game-Pic">
+    </div>
 
+    <div class="games">
+        <h2>Popular Games</h2>
+        <ul>
+            <li class="list active" data-filter="all">All Games</li>
+            <li class="list" data-filter="pc">Pc Games</li>
+            <li class="list" data-filter="mobile">Mobile Games</li>
+        </ul>
 
+        <div class="cardbx">
+            <div class="card" data-item="pc">
+                <img src="Assets/game1.png" alt="Game">
+                <div class="content">
+                    <h4>GTA V</h4>
+                    <div class="progress-line"><span></span></div>
+                    <div class="info">
+                        <p>Pricing<br><span>£35.67</span></p>
+                        <a href="#">Play Now</a>
+                    </div>
+                </div>
+            </div>
+             <div class="card" data-item="pc">
+                <img src="Assets/game3.jpg" alt="Game">
+                <div class="content">
+                    <h4>Batman - Akharan City</h4>
+                    <div class="progress-line"><span></span></div>
+                    <div class="info">
+                        <p>Pricing<br><span>£7.67</span></p>
+                        <a href="#">Play Now</a>
+                    </div>
+                </div>
+            </div>
+             <div class="card" data-item="mobile">
+                <img src="Assets/game4.png" alt="Game">
+                <div class="content">
+                    <h4>Assassian Creed - Valhalla</h4>
+                    <div class="progress-line"><span></span></div>
+                    <div class="info">
+                        <p>Pricing<br><span>£15.67</span></p>
+                        <a href="#">Play Now</a>
+                    </div>
+                </div>
+            </div>
+             <div class="card" data-item="pc">
+                <img src="Assets/game6.jpg" alt="Game">
+                <div class="content">
+                    <h4>God of War</h4>
+                    <div class="progress-line"><span></span></div>
+                    <div class="info">
+                        <p>Pricing<br><span>£19.67</span></p>
+                        <a href="#">Play Now</a>
+                    </div>
+                </div>
+            </div>
+               <div class="card" data-item="mobile">
+                <img src="Assets/game5.jpg" alt="Game">
+                <div class="content">
+                    <h4>Spider Man - Remastered</h4>
+                    <div class="progress-line"><span></span></div>
+                    <div class="info">
+                        <p>Pricing<br><span>£9.67</span></p>
+                        <a href="#">Play Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card" data-item="mobile">
+                <img src="Assets/game7.jpg" alt="Game">
+                <div class="content">
+                    <h4>Battle Ground Mobile India - BGMI</h4>
+                    <div class="progress-line"><span></span></div>
+                    <div class="info">
+                        <p>Pricing<br><span>£24.67</span></p>
+                        <a href="#">Play Now</a>
+                    </div>
+                </div>
+            </div>
+             <div class="card" data-item="mobile">
+                <img src="Assets/game8.jpg" alt="Game">
+                <div class="content">
+                    <h4>Call Of Duty - Mobile</h4>
+                    <div class="progress-line"><span></span></div>
+                    <div class="info">
+                        <p>Pricing<br><span>£24.67</span></p>
+                        <a href="#">Play Now</a>
+                    </div>
+                </div>
+            </div>
+              <div class="card" data-item="pc">
+                <img src="Assets/game9.jpg" alt="Game">
+                <div class="content">
+                    <h4>Free Fire </h4>
+                    <div class="progress-line"><span></span></div>
+                    <div class="info">
+                        <p>Pricing<br><span>£24.67</span></p>
+                        <a href="#">Play Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card" data-item="pc">
+                <img src="Assets/game10.jpg" alt="Game">
+                <div class="content">
+                    <h4>Shadow Fight - Arena</h4>
+                    <div class="progress-line"><span></span></div>
+                    <div class="info">
+                        <p>Pricing<br><span>£24.67</span></p>
+                        <a href="#">Play Now</a>
+                    </div>
+                </div>
+            </div>
+            
+
+        </div>
+    </div>
 
 
 
