--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <h2>Popular Games</h2>
         <ul>
             <li class="list active" data-filter="all">All Games</li>
-            <li class="list" data-filter="pc">Pc Games</li>
             <li class="list" data-filter="mobile">Mobile Games</li>
+            <li class="list" data-filter="pc">Pc Games</li>
         </ul>
 
         <div class="cardbx">
@@ -174,6 +174,94 @@
 
         </div>
     </div>
+
+
+
+
+
+    <!--                Tournaments             -->
+
+<div class="tournaments">
+    <h2>Live Tournaments</h2>
+    <div class="boxBx">
+
+        <div class="box">
+            <img src="Assets/tournament1.jpg" alt="Tour 1">
+            <div class="content">
+                <h4><span>50</span> Matches in Progress...</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae quas hic, est debitis veritatis impedit sed, pariatur sunt repellendus magnam, consequatur maiores a. Ducimus ullam impedit, nam eligendi corrupti unde?</p>
+                <div class="btn">
+                    <a href="#" class="watch">Watch Now</a>
+                    <a href="#" class="join">Join Now</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="Assets/tournament2.jpg" alt="Tour 2">
+            <div class="content">
+                <h4><span>35</span> Matches in Progress...</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae quas hic, est debitis veritatis impedit sed, pariatur sunt repellendus magnam, consequatur maiores a. Ducimus ullam impedit, nam eligendi corrupti unde?</p>
+                <div class="btn">
+                    <a href="#" class="watch">Watch Now</a>
+                    <a href="#" class="join">Join Now</a>
+                </div>
+            </div>
+        </div>
+
+            <div class="box">
+            <img src="Assets/tournament3.jpg" alt="Tour 2">
+            <div class="content">
+                <h4><span>35</span> Matches in Progress...</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae quas hic, est debitis veritatis impedit sed, pariatur sunt repellendus magnam, consequatur maiores a. Ducimus ullam impedit, nam eligendi corrupti unde?</p>
+                <div class="btn">
+                    <a href="#" class="watch">Watch Now</a>
+                    <a href="#" class="join">Join Now</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="Assets/tournament4.jpg" alt="Tour 2">
+            <div class="content">
+                <h4><span>35</span> Matches in Progress...</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae quas hic, est debitis veritatis impedit sed, pariatur sunt repellendus magnam, consequatur maiores a. Ducimus ullam impedit, nam eligendi corrupti unde?</p>
+                <div class="btn">
+                    <a href="#" class="watch">Watch Now</a>
+                    <a href="#" class="join">Join Now</a>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="box">
+            <img src="Assets/tournament5.jpg" alt="Tour 2">
+            <div class="content">
+                <h4><span>35</span> Matches in Progress...</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae quas hic, est debitis veritatis impedit sed, pariatur sunt repellendus magnam, consequatur maiores a. Ducimus ullam impedit, nam eligendi corrupti unde?</p>
+                <div class="btn">
+                    <a href="#" class="watch">Watch Now</a>
+                    <a href="#" class="join">Join Now</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="Assets/tournament6.jpg" alt="Tour 2">
+            <div class="content">
+                <h4><span>35</span> Matches in Progress...</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae quas hic, est debitis veritatis impedit sed, pariatur sunt repellendus magnam, consequatur maiores a. Ducimus ullam impedit, nam eligendi corrupti unde?</p>
+                <div class="btn">
+                    <a href="#" class="watch">Watch Now</a>
+                    <a href="#" class="join">Join Now</a>
+                </div>
+            </div>
+        </div>
+
+        
+    </div>
+</div>
+
 
 
 
