HTML and CSS doneclear

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <a href="#" class="logo">Welcome Gammers</a>
     <ul class="nav">
         <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Games</a></li>
-        <li><a href="#">Tournaments</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#games">Games</a></li>
+        <li><a href="#tournaments">Tournaments</a></li>
+        <li><a href="#contact">Contact</a></li>
     </ul>
 
     <div class="action">
@@ -50,7 +50,7 @@
 
 <!--            ABOUT SECTION NOW           -->
    
-    <div class="about">
+    <div class="about" id="about">
         <div class="contentBx">
             <h2>About Us</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex ab nesciunt qui officiis voluptatum magni impedit nulla adipisci, eum totam repudiandae error ipsa, quae nostrum animi voluptatibus, ducimus aliquam?
@@ -62,7 +62,7 @@
         <img src="Assets/videogame.png" alt="Video-Game-Pic">
     </div>
 
-    <div class="games">
+    <div class="games" id="games">
         <h2>Popular Games</h2>
         <ul>
             <li class="list active" data-filter="all">All Games</li>
@@ -181,7 +181,7 @@
 
     <!--                Tournaments             -->
 
-<div class="tournaments">
+<div class="tournaments" id="tournaments">
     <h2>Live Tournaments</h2>
     <div class="boxBx">
 
@@ -265,6 +265,49 @@
 
 
 
+
+
+
+
+
+
+    <div class="contact" id="contact">
+        <img src="Assets/contact.jpg" alt="Contact-Pic">
+        <div class="form">
+            <h1>Contact Us</h1>
+            <div class="inputBx">
+                <p>Enter Name</p>
+                <input type="text" placeholder="Enter Your Full Name">
+            </div>
+             <div class="inputBx">
+                <p>Enter Email</p>
+                <input type="text" placeholder="Enter Your E-mail">
+            </div>
+             <div class="inputBx">
+                <p>Message</p>
+                <textarea placeholder="Type Your Text Here ..."></textarea>
+            </div>
+             <div class="inputBx">
+                <input type="submit" name="Submit">
+            </div>
+        </div>
+    </div>
+
+
+
+
+  <footer>
+    <div class="info">
+        <a href="#" class="logo">Gamers</a>
+        <p><i class='bx bx-copyright'></i>2025 All Rights Reserved</p>
+        <ul>
+            <li><a href="#"><i class='bx bxl-instagram-alt'></i></a></li>
+            <li><a href="#"><i class='bx bxl-instagram'></i></a></li>
+            <li><a href="#"><i class='bx bxl-twitter'></i></a></li>
+            <li><a href="#"><i class='bx bxl-youtube'></i></a></li>
+        </ul>
+    </div>
+</footer>
 
     <script src="main.js"></script>
 </body>
