--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <input type="text" placeholder="Search games">
         </div>
     </div>
-    <div class="toggleMenu"></div>
+    <div class="toggleMenu" onclick="toggleMenu();"></div>
 </header>
 
 
