--- a/index.html
+++ b/index.html
@@ -10,24 +10,25 @@
 </head>
 <body>
     
-<header>
-    <a href="#" class="logo">Welcome Gammers</a>
+  <header>
+    <a href="#" class="logo">Welcome Gamers</a>
     <ul class="nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#games">Games</a></li>
-        <li><a href="#tournaments">Tournaments</a></li>
-        <li><a href="#contact">Contact</a></li>
+      <li><a href="#">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#games">Games</a></li>
+      <li><a href="#tournaments">Tournaments</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
-
     <div class="action">
-        <div class="searchbox">
-            <a href="#"><i class='bx bx-search'></i></a>
-            <input type="text" placeholder="Search games">
-        </div>
+      <div class="searchbox">
+        <i class='bx bx-search'></i>
+        <input type="text" placeholder="Search games"/>
+      </div>
     </div>
-    <div class="toggleMenu" onclick="toggleMenu();"></div>
-</header>
+   <div class="toggleMenu" onclick="toggleMenu()">
+  <i class='bx bx-menu'></i>
+</div>
+  </header>
 
 
 <!---          HOME BANNER STARTS FROM HERE NOW         -->
